AMQ-500 reconciled windows start script with o.a.a.broker.Main
git-svn-id: https://svn.apache.org/repos/asf/incubator/activemq/trunk@371767 13f79535-47bb-0310-9956-ffa450edef68